# s3_daytrading

./: .gitignore  APPLE_SILICON_OPTIMIZATION_COMPLETE.md  BACKTEST_RESULTS_SUMMARY.md  GPU_OPTIMIZATION_GUIDE.md  MLX_BACKTEST_MIGRATION_GUIDE.md  MLX_IMPLEMENTATION_SUMMARY.md  MLX_INTEGRATION_README.md  MLX_INTEGRATION_STRATEGY.md  MLX_INTRADAY_GUIDE.md  MLX_PERFORMANCE_RESULTS.md  MLX_QUICK_REFERENCE.md  MLX_VS_PYTORCH_COMPARISON.md  MPS_OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  README.md  README_S3_AI.md  S3_AI_IB_SETUP_GUIDE.md  S3_DATABASE_STRATEGY_SUMMARY.md  S3_HIGH_VOLUME_RESULTS.md  S3_MULTI_TICKER_RESULTS.md  S3_QUALITY_STOCKS_ANALYSIS.md  S3_TRADING_COMPARISON.md  S3_WIN_RATE_OPTIMIZATION.md  SIGNAL_HANDLING.md  TWS_API_SETUP_GUIDE.md  VWAP_ENHANCEMENT_SUMMARY.md  analyze_indicator_performance.py  analyze_s3_portfolio.py  apple_silicon_optimizer.py  apply_ai_wrapper_fix.py  backtest_with_vwap_bands.py  benchmark_mps.py  benchmark_mps_optimizations.py  benchmark_pytorch_vs_mlx.py  check_db_data.py  check_indicator_usage.py  check_ticker_suitability.py  check_tws_status.py  commands_s3.md  compare_backtest_performance.py  (+157 more)
models/: indicator_scaler.pkl  indicator_scaler_gpu.pkl
swift_avwap/: Package.swift
swift_avwap/.build/: plugin-tools.yaml
swift_avwap/.build/arm64-apple-macosx/release/: libSwiftAVWAP.dylib
swift_avwap/.build/arm64-apple-macosx/release/Modules/: SwiftAVWAP.swiftdoc  SwiftAVWAP.swiftmodule  SwiftAVWAP.swiftsourceinfo
swift_avwap/Sources/SwiftAVWAP/: SwiftAVWAP.swift
(+94 files in other folders)
