[project]
name = "s3-daytrading"
version = "0.1.0"
description = "S3 Day Trading Strategy Implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=2.2.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "fmpsdk>=20250102.0",
    "ib-insync>=0.9.86",
    "tabulate>=0.9.0",
    "scipy>=1.15.0",
    "seaborn>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["s3_daytrading"]